--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2024"
 
 [dependencies]
 # bevy = { version = "0.15", default-features = false, features = ["bevy_asset", "bevy_audio", "bevy_color", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos", "bevy_gltf", "bevy_pbr", "bevy_picking", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_state", "bevy_text", "bevy_window", "bevy_winit", "ktx2", "multi_threaded", "png", "smaa_luts", "tonemapping_luts", "vorbis", "webgl2", "x11", "zstd", "custom_cursor"] }
-bevy = "0.15"
+bevy = { version = "0.15", default-features = true, features = ["webgpu", "bevy_mesh_picking_backend"] }
+# bevy = "0.15"
 bevy_rapier3d = "0.29"
 # avian3d = "0.2"
 # log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
